--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   to = "/index.html"
   status = 200
 
-[headers]
+[[headers]]
   for = "/*"
   [headers.values]
     Content-Type = "application/x-www-form-urlencoded"
